feat: Add Export makes data to spredsheet functionality. \n\n Make aadjustments to Handle Query Utils. \n\n Make adjustments to get makes and get models.
